[package]
name = "libtraceroute"
version = "0.1.2"
authors = ["Ilya Grishkov <ilyagrishkov@icloud.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/ilyagrishkov/libtraceroute"
repository = "https://github.com/ilyagrishkov/libtraceroute"
description = "Cross-platform traceroute library for Rust"
readme = "README.md"
keywords = ["traceroute", "networking", "udp", "tcp", "icmp"]
categories = ["network-anlysis"]

[dependencies]
pnet = "0.34.0"
rand = "0.8.5"
async-std = "1.9.0"

[dev-dependencies]
clap = "4.4.12"
